# api/swagger.yaml
@@ -28,7 +28,75 @@ paths:
           description: "Forbidden"
         "404":
           description: "Not Found"
-  /logs:
+  /resources:
+    get:
+      tags:
+      - "Logs"
+      summary: "Get all resources in a namespace"
+      operationId: "listResources"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "namespace"
+        in: "query"
+        description: "Name of the namespace"
+        required: true
+        type: "string"
+        x-exportParamName: "Namespace"
+      responses:
+        "200":
+          description: "All resources in the namespace retrieved successfully"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/ResourcesList"
+        "401":
+          description: "Unauthorized"
+        "403":
+          description: "Forbidden"
+        "404":
+          description: "Not Found"
+  /resources/{namespace}:
+    get:
+      tags:
+      - "Logs"
+      summary: "Get all resources in a namespace"
+      operationId: "getResource"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "namespace"
+        in: "path"
+        description: "Name of the namespace"
+        required: true
+        type: "string"
+        x-exportParamName: "Namespace"
+      - name: "resourceType"
+        in: "query"
+        description: "Type of the resource"
+        required: true
+        type: "string"
+        x-exportParamName: "ResourceType"
+      - name: "name"
+        in: "query"
+        description: "Name of the resource"
+        required: true
+        type: "string"
+        x-exportParamName: "Name"
+      responses:
+        "200":
+          description: "All resources in the namespace retrieved successfully"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/ResourcesList"
+        "401":
+          description: "Unauthorized"
+        "403":
+          description: "Forbidden"
+        "404":
+          description: "Not Found"
+  /logs/{namespace}:
     get:
       tags:
       - "Logs"
@@ -52,32 +120,85 @@ definitions:
   NamespaceResponse:
     type: "object"
     required:
-    - "Namespaces"
+    - "namespaces"
     properties:
-      Namespaces:
+      namespaces:
         type: "array"
         items:
           $ref: "#/definitions/NamespaceInList"
     example:
-      Namespaces:
-      - path: "path"
+      namespaces:
+      - resourcesPath: "resourcesPath"
         name: "name"
-      - path: "path"
+      - resourcesPath: "resourcesPath"
         name: "name"
+  ResourcesList:
+    type: "object"
+    required:
+    - "namespace"
+    - "resources"
+    properties:
+      namespace:
+        type: "string"
+        description: "Namespace of the resource"
+      resources:
+        type: "array"
+        items:
+          $ref: "#/definitions/ResourcesByType"
+    example:
+      namespace: "namespace"
+      resources:
+      - resources:
+        - name: "name"
+        - name: "name"
+        resourceType: "pod"
+      - resources:
+        - name: "name"
+        - name: "name"
+        resourceType: "pod"
+  ResourcesByType:
+    type: "object"
+    required:
+    - "resourceType"
+    - "resources"
+    properties:
+      resourceType:
+        type: "string"
+        example: "pod"
+        description: "Type of the resource"
+      resources:
+        type: "array"
+        items:
+          $ref: "#/definitions/ResourcesInList"
+    example:
+      resources:
+      - name: "name"
+      - name: "name"
+      resourceType: "pod"
+  ResourcesInList:
+    type: "object"
+    required:
+    - "name"
+    properties:
+      name:
+        type: "string"
+        description: "Name of the resource"
+    example:
+      name: "name"
   NamespaceInList:
     type: "object"
     required:
     - "name"
-    - "path"
+    - "resourcesPath"
     properties:
       name:
         type: "string"
         description: "Name of the namespace"
-      path:
+      resourcesPath:
         type: "string"
-        description: "Api path to get logs for the namespace"
+        description: "Api path to get resources for the namespace"
     example:
-      path: "path"
+      resourcesPath: "resourcesPath"
       name: "name"
   LogResponse:
     type: "object"
